--- a/app/scss/global/_colors.scss
+++ b/app/scss/global/_colors.scss
@@ -1,5 +1,6 @@
 @use '../util/' as u;
 
 :root{
-    --dark-color:rgb(26, 26, 26);
+    --dark-color:rgb(71, 71, 71);
+    --red:rgb(252, 25, 25);
 }
