--- a/app/scss/global/_bolierplate.scss
+++ b/app/scss/global/_bolierplate.scss
@@ -14,7 +14,13 @@ html{
 body{
     margin: 0px;
     padding: 0px;
-    font-weight: 300;
+    // font-weight: 300;
     color: white;
-    background-color: var(--dark-color);
+    // background-color: var(--dark-color);
+    font-family: u.$main-font;
+
+    background: #4e54c8;  
+    background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
+    width: 100%;
+    height:100vh;
 }
