--- a/app/scss/layout/_index.scss
+++ b/app/scss/layout/_index.scss
@@ -1,8 +1,200 @@
-.main{
+@use '../util/' as u;
+
+.circles{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+
+    li{
+        position: absolute;
+        display: block;
+        list-style: none;
+        width: 20px;
+        height: 20px;
+        background: rgba(255, 255, 255, 0.2);
+        animation: animate 25s linear infinite;
+        bottom: -150px;
+        
+    }
+
+    li:nth-child(1){
+        left: 25%;
+        width: 80px;
+        height: 80px;
+        animation-delay: 0s;
+    }
+
+    li:nth-child(2){
+        left: 10%;
+        width: 20px;
+        height: 20px;
+        animation-delay: 2s;
+        animation-duration: 12s;
+    }
+
+    li:nth-child(3){
+        left: 70%;
+        width: 20px;
+        height: 20px;
+        animation-delay: 4s;
+    }
+    
+    li:nth-child(4){
+        left: 40%;
+        width: 60px;
+        height: 60px;
+        animation-delay: 0s;
+        animation-duration: 18s;
+    }
+    
+    li:nth-child(5){
+        left: 65%;
+        width: 20px;
+        height: 20px;
+        animation-delay: 0s;
+    }
+    
+    li:nth-child(6){
+        left: 75%;
+        width: 110px;
+        height: 110px;
+        animation-delay: 3s;
+    }
+    
+    li:nth-child(7){
+        left: 35%;
+        width: 150px;
+        height: 150px;
+        animation-delay: 7s;
+    }
+    
+    li:nth-child(8){
+        left: 50%;
+        width: 25px;
+        height: 25px;
+        animation-delay: 15s;
+        animation-duration: 45s;
+    }
+    
+    li:nth-child(9){
+        left: 20%;
+        width: 15px;
+        height: 15px;
+        animation-delay: 2s;
+        animation-duration: 35s;
+    }
+    
+    li:nth-child(10){
+        left: 85%;
+        width: 150px;
+        height: 150px;
+        animation-delay: 0s;
+        animation-duration: 11s;
+    }
+    
+}
+
+@keyframes animate {
+
+    0%{
+        transform: translateY(0) rotate(0deg);
+        opacity: 1;
+        border-radius: 0;
+    }
+
+    100%{
+        transform: translateY(-1000px) rotate(720deg);
+        opacity: 0;
+        border-radius: 50%;
+    }
+
+}
+
+.content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: clamp(u.rem(300), 80vw, u.rem(900));
+    // height: 50vh;
+    background-color: transparent;
+    border: u.rem(10) solid white;
+    border-radius: 20px;
+    // color: var(--dark-color);
+    text-align: center;
+    padding: 20px;
+
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    // outline: 2px solid red;
+    flex-direction: column;
 
+    &__count{
+        background-color: white;
+        color: var(--dark-color);
+        padding: u.rem(20);
+        border-radius: 10px;
+    }
+
+    h2{
+        margin-top: u.rem(20);
+        margin-bottom: u.rem(20);
+    }
+    span{
+        color: var(--red);
+    }
+
+    button{
+        padding: 10px;
+        background-color: transparent;
+        font-weight: 400;
+        width: 15vw;
+        max-width: u.rem(200);
+        color: white;
+        border-radius: 10px;
+        min-width: u.rem(80);
+        font-size: clamp(u.rem(10), 2vw, u.rem(20));
+
+        @media (max-width: u.rem(500)) {
+            padding: 5px;
+        }
+        
+    }
+    button:hover{
+        cursor: pointer;
+        transition-duration: 0.5s;
+        
+    }
+    .play{
+        border: 3px solid rgb(0, 255, 0);
+    }
+        .play:hover{
+            background-color: rgb(0, 255, 0);
+        }
+    .puse{
+        border: 3px solid rgb(255, 94, 0);
+    }
+        .puse:hover{
+            background-color: rgb(255, 94, 0);
+        }
+
+    h4{
+        // color: rgb(141, 255, 141);
+        margin-top: 10px;
+    }
+    hr{
+        width: 80%;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+}
+
+iframe{
+    width: 100px;
+    height: 100px;
 }
